...
                }
                .accessibilityLabel("Show Hidden Categories")
            }
        } label: {
            Image(systemName: "ellipsis.circle")
        }
        .accessibilityLabel("Budget options")
        .accessibilityHint("Create categories and groups, change layout and display options")
    }
}

#Preview {
    NavigationStack {
...
